--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Musschoot's Baby Preparation App</title>
+    <title>Surprise Musschoot's Baby Preparation App</title>
     <style>
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif;
@@ -193,7 +193,7 @@
 <body>
     <div class="container">
         <h1>Baby Boy Preparation App</h1>
-        <div class="baby-name">For Lucas Musschoot</div>
+        <div class="baby-name">For Surprise Musschoot</div>
         <nav>
             <button data-section="todos">To-Do's</button>
             <button data-section="clothing">Clothing</button>
